# reactos

./: CODEOWNERS
base/services/: CMakeLists.txt
base/services/umpnpmgr/: umpnpmgr.c
base/setup/lib/: bootsup.c
base/setup/usetup/: devinst.c
base/system/winlogon/: sas.c
boot/bootdata/: bootcd.ini  hivesft.inf  hivesys.inf  livecd.ini  setupreg.inf  txtsetup.sif
boot/freeldr/freeldr/ntldr/: setupldr.c
dll/cpl/mmsys/: mmsys.c  resource.h
dll/directx/ddraw/: main.c  startup.c
dll/directx/ddraw/Clipper/: clipper_main.c
dll/directx/ddraw/Ddraw/: ddraw_displaymode.c
dll/directx/ddraw/Surface/: surface_main.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/include/: ntdllp.h
dll/ntdll/ldr/: ldrutils.c
dll/win32/: CMakeLists.txt
dll/win32/msacm32.drv/: wavemap.c
dll/win32/mstask/: task.c  task_scheduler.c
dll/win32/rpcrt4/: cproxy.c  cstub.c
dll/win32/setupapi/: devinst.c
dll/win32/shlwapi/: shlwapi.spec
dll/win32/syssetup/: wizard.c
dll/win32/wdmaud.drv/: legacy.c  mmewrap.c  mmixer.c  resample.c  wdmaud.c  wdmaud.h
dll/win32/winmm/: CMakeLists.txt  deviface.c  driver.c  lolvldrv.c  mci.c  registry.c  winemm.h  winmm.c
drivers/bus/: CMakeLists.txt
drivers/bus/acpi/: CMakeLists.txt
drivers/bus/acpi_old/: CMakeLists.txt  acpi.h  acpi.rc  acpiinit.c  amli.c  amli.h  dispatch.c  registry.c
drivers/filesystems/fastfat_new/: allocsup.c
drivers/filesystems/udfs/: create.cpp
drivers/filters/fltmgr/: Context.c  Filter.c  Misc.c  Object.c  Volume.c  fltmgr.spec
drivers/ksfilter/ks/: allocators.c  api.c  clocks.c  connectivity.c  device.c  filter.c  filterfactory.c  irp.c  misc.c  pin.c  swenum.c  topology.c
drivers/network/dd/: CMakeLists.txt
drivers/network/dd/pcntpci5/: CMakeLists.txt  pcntpci5.rc
drivers/storage/: CMakeLists.txt
drivers/storage/ftdisk/: CMakeLists.txt  ftdisk.c  ftdisk.h  ftdisk.rc
drivers/storage/ide/: CMakeLists.txt
drivers/storage/mountmgr/: mountmgr.c  symlink.c
drivers/storage/partmgr_old/: CMakeLists.txt  partmgr.c  partmgr.h  partmgr.rc
drivers/storage/port/: CMakeLists.txt
drivers/usb/usbstor/: CMakeLists.txt
drivers/wdm/audio/backpln/audio_test/: CMakeLists.txt
drivers/wdm/audio/hdaudbus_new/: CMakeLists.txt  adsp.cpp  buspdo.cpp  driver.h  fdo.cpp  fdo.h  hdac_controller.cpp  hdac_stream.cpp  hdaudio.cpp  nhlt.cpp  regfuncs.h  sgpc.cpp  sklhdaudbus.cpp  sof-tplg.cpp
hal/: CMakeLists.txt  hal.spec
hal/halaacpi/: CMakeLists.txt  halaacpi.spec
hal/halaacpi/acpi/: acpitimer.c  busemul.c  dispatch.c  dispatch.h  halacpi.c  halpnpdd.c
hal/halaacpi/apic/: apic.c  apicacpi.c  apictimer.c  apictrap.S  rtctimer.c
hal/halaacpi/bus/: pcibus.c
hal/halaacpi/generic/: beep.c  cmos.c  display.c  dma.c  drive.c  halinit.c  memory.c  misc.c  reboot.c  spinlock.c  sysinfo.c  usage.c
hal/halaacpi/generic/i386/: bios.c
hal/halaacpi/include/: apic.h  apicacpi.h  bus.h  hal.h  halacpi.h  haldma.h  halp.h  ioapic.h  pic.h
hal/halaacpi/pic/: pic.c  pic.h
hal/halaacpi/up/: processor.c
hal/halacpi/: CMakeLists.txt  halacpi.spec
hal/halacpi/acpi/: busemul.c  dispatch.c  dispatch.h  halacpi.c  halpnpdd.c  timer.c
hal/halacpi/bus/: pcibus.c
hal/halacpi/generic/: beep.c  cmos.c  display.c  dma.c  drive.c  halinit.c  memory.c  misc.c  reboot.c  spinlock.c  sysinfo.c  usage.c  v86.S
hal/halacpi/generic/i386/: bios.c  portio.c
hal/halacpi/include/: bus.h  hal.h  halacpi.h  haldma.h  halp.h
hal/halacpi/pic/: pic.S  pic.c  pic.h  pictrap.S  profil.c  systimer.S  timer.c  timer.h
hal/halacpi/up/: processor.c
hal/halx86/: CMakeLists.txt
hal/halx86/apic/: apic.c  rtctimer.c
hal/halx86/generic/: dma.c  halinit.c  timer.c  usage.c
hal/halx86/include/: hal.h  haldma.h  halp.h
hal/halx86/up/: pic.S
media/doc/: 3rd Party Files.txt  README.FSD
media/inf/: hdc.inf  msmouse.inf
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec
ntoskrnl/cache_new/: cachesub.c  cc.h  copysup.c  fssup.c  lazyrite.c  logsup.c  mdlsup.c  pinsup.c  vacbsup.c
ntoskrnl/config/: cmdata.c  cmsysini.c  cmvalche.c
ntoskrnl/ex/: init.c  sysinfo.c
ntoskrnl/fsrtl/: fastio.c  largemcb.c  tunnel.c
ntoskrnl/fstub/: disksup.c  halstub.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/include/internal/: cc_new.h  cm.h  fsrtl.h  io.h  ke.h  mm_new.h  ntoskrnl.h  po.h
ntoskrnl/io/: debug.c  pnpio.h
ntoskrnl/io/iomgr/: adapter.c  device.c  deviface.c  driver.c  iomgr.c  iorsrce.c  irp.c  volume.c
ntoskrnl/io/pnpmgr/: arbiters.c  plugplay.c  pnpdel.c  pnpenum.c  pnpevent.c  pnpinit.c  pnpirp.c  pnpmap.c  pnpmgr.c  pnpnode.c  pnpnotify.c  pnpreport.c  pnpres.c  pnproot.c  pnputil.c
ntoskrnl/kd64/: kddata.c  kdinit.c
ntoskrnl/ke/: time.c  timerobj.c
ntoskrnl/ke/i386/: cpu.c  irqobj.c  kiinit.c  traphdlr.c
ntoskrnl/mm/ARM3/: mdlsup.c
ntoskrnl/mm_new/: balance.c  freelist.c  mminit.c  pagefile.c  shutdown.c
ntoskrnl/mm_new/ARM3/: contmem.c  drvmgmt.c  dynamic.c  expool.c  hypermap.c  iosup.c  kdbg.c  largepag.c  mdlsup.c  miarm.h  mmdbg.c  mminit.c  mmsup.c  ncache.c  pagfault.c  pfnlist.c  pool.c  procsup.c  section.c  session.c  special.c  syscache.c  sysldr.c  syspte.c  vadnode.c  virtual.c  workset.c  zeropage.c
ntoskrnl/mm_new/i386/: page.c  pagepae.c
ntoskrnl/ob/: obinit.c
ntoskrnl/po/: poshtdwn.c  power.c
ntoskrnl/ps/: process.c  quota.c
ntoskrnl/se/: accesschk.c  semgr.c
ntoskrnl/wmi/: wmi.c  wmidrv.c
sdk/cmake/: CMakeMacros.cmake  gcc.cmake  msvc.cmake
sdk/include/ddk/: acpiioct.h  classpnp.h  d3dkmthk.h  hdaudio.h  portcls.h  scsi.h
sdk/include/ndk/: cctypes.h  cmtypes.h  halfuncs.h  iotypes.h  mmtypes.h  pstypes.h  rtlfuncs.h  rtltypes.h  section_attribs.h
sdk/include/psdk/: basetsd.h  ks.h  ksmedia.h  mmddk.h  sal.h  wmistr.h
sdk/include/xdk/: exfuncs.h  halfuncs.h  interlocked.h  iofuncs.h  iotypes.h  mmfuncs.h  potypes.h
sdk/lib/rtl/: dbgbuffer.c  env.c  process.c  rangelist.c
sdk/tools/spec2def/: spec2def.c
win32ss/gdi/eng/: mapping.c
win32ss/gdi/ntgdi/: freetype.c  gdiobj.c
win32ss/reactx/ntddraw/: dxeng.c
win32ss/user/ntuser/: msgqueue.c  usrheap.c
(+130 files in other folders)
